--- a/HTML/style.css
+++ b/HTML/style.css
@@ -16,3 +16,11 @@ body{
     margin-left:20px;
     margin-right:20px;
 }
+
+table{
+    border-collapse: collapse;
+}
+td, th {
+    border:solid 1px;
+    padding:10px;
+}
