--- a/CSS/Product/product.css
+++ b/CSS/Product/product.css
@@ -57,10 +57,21 @@ body {
     position:absolute;
     width: 72px;
     height:72px;
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.9);
 
     /* exercise start */
     
+    top:10px;
+    right:10px;
+    font-size: 28px;
+    font-weight: bold;
+    color: white;
+    border-radius: 36px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     /* exercise end */
 
 }
